--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,12 +1,12 @@
 body{
-    background-color: lightseagreen;
+    background-color: rgb(117, 255, 248);
     text-align: center;
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 a{
-    color:darkmagenta;
+    color:ma;
     text-decoration: none;
 }
 
