--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,3 +6,8 @@
     |
     <a href="contract.html">Contract</a>
 </nav>
+<nav>
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/magnificent_meerkat/about.html">Magnificent Meerkat Industries</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/stuff/CRAPPY%20page!.htm">Crappy Site</a>
+</nav>
