--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -10,4 +10,6 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/magnificent_meerkat/about.html">Magnificent Meerkat Industries</a>
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/stuff/CRAPPY%20page!.htm">Crappy Site</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/website_evaluations/website_evaluations.html">Website Evaluations</a>
 </nav>
