--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -6,7 +6,7 @@ body{
 }
 
 a{
-    color:ma;
+    color:maroon;
     text-decoration: none;
 }
 
@@ -16,8 +16,11 @@ a:hover{
 
 main{
     text-align: left;
-    margin-left: 20%;
-    margin-right: 20%;
+    /* margin-left: 20%;
+    margin-right: 20%; */
+    max-width: 1200px;
+    width: 90%;
+    margin:0 auto;
 }
 
 h2{
