--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -34,3 +34,21 @@ img{
 figure{
     text-align: center;
 }
+/* tablet */
+@media screen and (min-width: 601px) and (max-width: 980px) {
+    img{
+        width:80%;
+    }
+}
+/* mobile */
+@media screen and (max-width: 600px){
+    img{
+        width:90%;
+    }
+    main{
+        padding:10px;
+    }
+    h2{
+        font-size: 1.5em;
+    }
+}
