--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -5,6 +5,8 @@
     <a href="introduction.html">Introduction</a>
     |
     <a href="contract.html">Contract</a>
+    |
+    <a href="fccfsjs_outline.html">FCC FSJS</a>
 </nav>
 <nav>
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/magnificent_meerkat/about.html">Magnificent Meerkat Industries</a>
