update to hobby index.html

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -14,4 +14,6 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/stuff/CRAPPY%20page!.htm">Crappy Site</a>
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/website_evaluations/website_evaluations.html">Website Evaluations</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/hobby/index.html">Hobby Site</a>
 </nav>
