--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,5 +15,5 @@
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/website_evaluations/website_evaluations.html">Website Evaluations</a>
     ||
-    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/hobby/index.html">Hobby Site</a>
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/hobby/index.html">Hobby</a>
 </nav>
