--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -16,4 +16,6 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/website_evaluations/website_evaluations.html">Website Evaluations</a>
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/hobby/index.html">Hobby</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/intro_form.html">Introduction Page Form</a>
 </nav>
