--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,4 +18,6 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/hobby/index.html">Hobby</a>
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/intro_form.html">Introduction Page Form</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/project_overview.html">Project Overview</a>
 </nav>
