--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -34,3 +34,15 @@ a:hover{
     margin-top: 0px;
     float:left;
 }
+.hero-img{
+    width:80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.welcome{
+    padding-left:100px;
+}
+.home-bio{
+    padding-left:200px;
+}
