--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -20,4 +20,6 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/intro_form.html">Introduction Page Form</a>
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/project_overview.html">Project Overview</a>
+    ||
+    <a href="https://itis3135-react-mmuruga2.vercel.app/">React3</a>
 </nav>
