added logo placeholder image

--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -1,9 +1,8 @@
 body{
-    background-color: #ccd3ce;
+    background-color: #d9dfdb;
 }
 h1{
     font-size:40px;
-    /*text-align: center;*/
 }
 hr{
     height:10px;
