--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -49,6 +49,10 @@ nav a{
 nav{
     text-align: center;
 }
+nav a.active{
+    border: 2px solid black;
+    padding:.5px;
+}
 main{
     padding-left:40px;
 }
