--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -21,5 +21,5 @@
     ||
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/project_overview.html">Project Overview</a>
     ||
-    <a href="https://itis3135-react-mmuruga2.vercel.app/">React3</a>
+    <a href="https://itis3135-react-alpha.vercel.app/">React3</a>
 </nav>
