--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -22,4 +22,8 @@
     <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/project_overview.html">Project Overview</a>
     ||
     <a href="https://itis3135-react-alpha.vercel.app/">React3</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/review1.html">Peer Review 1</a>
+    ||
+    <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/review2.html">Peer Review 2</a>
 </nav>
