--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -93,3 +93,18 @@ footer{
     border-radius: 5px;
     box-shadow:0 0 20px rgba(250,250,250,0.5)
 }
+form{
+    /* padding-left:100px; */
+}
+form label{
+    display:block;
+    margin-top: 15px;
+    margin-bottom: 5px;
+} 
+form input{
+    display: block;
+    padding: 10px;
+    border-radius: 6px;
+    margin-bottom: 15px;
+    border: 2px solid rgb(41, 33, 95);
+}
