--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -74,7 +74,9 @@ footer{
     position:fixed;
     width:100%;
     height:100%;
-    display:flex;
+    /* display:flex; */
+    top:0;
+    left:0;
     justify-content: center;
     align-items: center;
     visibility: hidden;
@@ -86,12 +88,19 @@ footer{
 .lightbox-active{
     visibility: visible;
     opacity:1;
+    display: flex;
 }
 .lightbox img{
     max-width: 85%;
     max-height: 85%;
     border-radius: 5px;
     box-shadow:0 0 20px rgba(250,250,250,0.5)
+}
+.photo img{
+    width:100%;
+    height:auto;
+    display:block;
+    cursor: pointer;
 }
 form label{
     display:block;
