--- a/itis3135/client_project/stylesheet/stylesheet.css
+++ b/itis3135/client_project/stylesheet/stylesheet.css
@@ -125,5 +125,6 @@ form input{
     display:flex;
     gap:70px;
     margin-bottom: 20px;
-
+    /* justify-content:center; */
+    padding-bottom:50px;
 }
